--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,6 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+uav_multiclass_model.h5
+C:\Users\dheer\UAV-Multiclass-Classification\uav_multiclass_model.h5
