--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,7 @@ celerybeat.pid
 
 # Environments
 .env
+.pkl
 .envrc
 .venv
 env/
@@ -206,5 +207,7 @@ marimo/_static/
 marimo/_lsp/
 __marimo__/
 
-uav_multiclass_model.h5
-C:\Users\dheer\UAV-Multiclass-Classification\uav_multiclass_model.h5
+uav_multiclass_cnn_model.h5
+C:\Users\dheer\UAV-Multiclass-Classification\uav_multiclass_cnn_model.h5
+C:\Users\dheer\UAV-Multiclass-Classification\label_encoder.pkl
+label_encoder.pkl
